# omni_marco_gazebo

./: .gitignore  README.md
src/: rosbaglogger.sh  setup.sh
src/data_processing/: rosbag2csvs.sh
src/haptic_device_2_marker/: CMakeLists.txt  package.xml
src/marco_controller_configuration_gazebo/: CMakeLists.txt  package.xml
src/marco_gazebo/: CMakeLists.txt  package.xml
src/microwave_oven/: CMakeLists.txt  package.xml
src/omni_2_marker/: CMakeLists.txt  package.xml
src/omni_launcher/: CMakeLists.txt  package.xml
src/omni_marco_launcher/: CMakeLists.txt  package.xml
src/phantom_omni/: CMakeLists.txt  package.xml
src/phantom_omni/launch/: omni_stiffness.launch
src/phantom_omni/msg/: LockState.msg  OmniFeedback.msg  PhantomButtonEvent.msg
src/phantom_omni/src/: omni.cpp
src/rviz_python_tutorial/: myviz.py  simple_experiment.rviz  test.rviz  test2.rviz
src/stiffness_commanding/: CMakeLists.txt  package.xml
src/stiffness_ellipsoid/: CMakeLists.txt  package.xml
src/stiffness_experiment/: CMakeLists.txt  package.xml
src/stiffness_feedback_forces/: CMakeLists.txt  package.xml
src/stiffness_launch/: CMakeLists.txt  package.xml
src/stiffness_learning/: CMakeLists.txt  package.xml
src/stiffness_simple_experiment/: Analysis.py  CMakeLists.txt  CombineData.py  ManageDataDirectories.py  ParticipantData.py  PlotExperiment.py  QuickAnalysis.py  SimpleExperimentTopic.py  kill_nodes.sh  package.xml  raw_data.json  rosbag_2_csvs.sh  rosbag_record.sh  rviz_experiment_config.rviz
src/test_common/: CMakeLists.txt  (+2 more)
stiffness_ellipsoid/: CMakeLists.txt
(+162 files in other folders)
